Archive2/34/033abcead930b4/output
main.cpp: In function 'int main()':
main.cpp:7:59: error: invalid static_cast from type 'int' to type 'unsigned char*'
 unsigned char *m_start = static_cast<unsigned char*>(0x243);
                                                           ^
main.cpp:8:57: error: invalid static_cast from type 'int' to type 'unsigned char*'
 unsigned char *m_end = static_cast<unsigned char*>(0x24F);
                                                         ^
